--- a/index.html
+++ b/index.html
@@ -8,75 +8,163 @@
 <body>
     <div class="inner-container">
         <div class="video-container">
-            <h1>Heartless (Lyrics)</h1>
+            <h1>Never Let Me Down (Lyrics)</h1>
             <h4>Kanye West</h4>
             <div class="inner-video">
-
+                <iframe width="300" height="300" src="https://www.youtube.com/embed/UQQdY2bKHjs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
         <div class="lyrics-container">
-            <pre>In the night I hear 'em talk
-                The coldest story ever told
-                Somewhere far along this road
-                He lost his soul to a woman so heartless
-                How could you be so heartless?
-                Oh, how could you be so heartless?
-                How could you be so, cold as the winter wind when it breeze, yo
-                Just remember that you talkin' to me though
-                You need to watch the way you talkin' to me, yo
-                I mean after all the things that we've been through
-                I mean after all the things we got into
-                Ayo, I know of some things that you ain't told me
-                Ayo, I did some things, but that's the old me
-                And now you wanna get me back and you gon' show me
-                So you walk around like you don't know me
-                You got a new friend, well, I got homies
-                But in the end it's still so lonely
-                In the night I hear 'em talk
-                The coldest story ever told
-                Somewhere far along this road
-                He lost his soul to a woman so heartless
-                How could you be so heartless?
-                Oh, how could you be so heartless?
-                How could be so Dr. Evil?
-                You bringin' out a side of me that I don't know
-                I decided we weren't gon' speak so
-                Why we up 3:00 a.m. on the phone?
-                Why do she be so mad at me for?
-                Homie, I don't know, she's hot and cold
-                I won't stop, won't mess my groove up
-                'Cause I already know how this thing go
-                You run and tell your friends that you're leaving me (hey)
-                They say that they don't see what you see in me (hey)
-                You wait a couple months then you gon' see (hey)
-                You'll never find nobody better than me
-                In the night I hear 'em talk
-                The coldest story ever told
-                Somewhere far along this road
-                He lost his soul to a woman so heartless
-                How could you be so heartless?
-                Oh, how could you be so heartless?
-                Talk and talk and talk and talk
-                Baby let's just knock it off
-                They don't know what we been through
-                They don't know 'bout me and you
-                So I got something new to see
-                And you just gon' keep hatin' me
-                And we just gon' be enemies
-                I know you can't believe
-                I could just leave it wrong
-                And you can't make it right
-                I'm gon' take off tonight
-                Into the night
-                In the night I hear 'em talk
-                The coldest story ever told
-                Somewhere far along this road
-                He lost his soul to a woman so heartless
-                How could you be so heartless?
-                Oh, how could you be so heartless?
-                Source: Musixmatch
-                Songwriters: Kanye West / Benjamin Hudson-mcildowie / Malik Yusef El Shabbaz Jones / Ernest Wilson / Scott Ramon Seguro Mescudi / Jeffrey Bhasker
-                Heartless lyrics © Universal Music Publishing Ltd., Sony/atv Tunes Llc, Emi Blackwood Music Inc., Universal Music Corp., Sony/atv Songs Llc, Way Above Music, Chrysalis Songs, No Id Music, Jabriel Iz Myne, Kmr Music Royalties Ii Scsp, Please Gimme My Publishing Inc</pre>
+            <pre>
+Oh, baby (hahaha)
+Turn the motherfuckin' music up
+
+When it comes to being true
+At least true to me (that's right, it's what I do, c'mon)
+One thing I've found (uh-huh)
+One thing I've found
+Oh, no, you'll never let me down (no, I ain't never let you down)
+Get up I get (down)
+Get up I get (down)
+Get up I get (down)
+Get up I get (down)
+Get up I get (down)
+Get up I get down
+
+First I snatched the streets
+Then I snatch the charts
+First I had they ear
+Now I have they hear
+Rappers came and went
+I've been here from the start
+I seen them put it together
+Watched them take it apart
+Seen the Rovers roll up with ribbons
+I seen 'em re-po'd, re-sold, and re-driven
+So when I reload, he holds number one positions
+When you hot, I'm hot
+And when your feet cold, mines are sizzlin'
+It's plain to see, niggas can't fuck with me
+'Cause I'ma be that nigga for life, this is not an image
+This is God-given
+This is hard livin' mixed with Cristal sippin'
+It's the most consistent, Hov
+Give you the most hits
+You could fit inside a whole disk and
+Nigga, I'm home on these charts, y'all niggas visitin'
+It's Hov tradition, Jeff Gordon of rap
+I'm back to claim pole position
+Holla at ya boy
+Get up I get (down)
+Get up I get (down)
+Get up I get (down)
+Get up I get
+
+I get down for my grandfather
+Who took my mama, made her sit in that seat
+Where white folks ain't want us to eat
+At the tender age of six she was arrested for the sit-ins
+And with that in my blood, I was born to be different
+Now niggas can't make it to ballots to choose leadership
+But we can make it to Jacob's or to the dealership
+Swear, I hear new music and I just don't be feelin' it
+Racisim's still alive, they just be concealin' it
+But I know they don't want me in the damn club
+They even made me show ID to get inside of Sam's Club
+I done did dirt and when to church to get my hands scrubbed
+Swear I been baptised 'least three or four times
+But in the land where niggas praise you, cons are gettin' paid
+It's gon' take a lot more than coupons to get us saved
+Like it take a lot more than Do-Rags to get you waves
+Nothin' as sad as the day my girl's father passed away
+So I promised to Mr. Rainey, I'm gonna marry your daughter
+And you know I gotta thank you for the way that she was brought up
+And I know that you was smilin' when you seen the car I bought her
+And you sent tears from heaven when you seen my car get balled up
+But I can't complain what the accident did to my left eye
+'Cause look what a accident did to Left-Eye
+First Aaliyah, now Romeo must die
+I know I got angels watchin' me from the other side
+
+When it comes to being true at least true to me
+One thing I've found, one thing I've found
+Oh, no, you'll never let me down
+Get up I get (down)
+Get up I get (down)
+Get up I get (down)
+Get up I get (down)
+Get up I get (down)
+Get up I get (down)
+
+We are all here for a reason on a particular path
+You don't need a curriculum to know that you are part of the math
+Cats think I'm delirious, but I'm so damn serious
+That's why I expose my soul to the globe, the world
+I'm tryna make it better for these little boys and girls
+I'm not just another individual
+My spirit is a part of this, that's why I get spiritual
+But I get my hymns from Him
+So it's not me, it's He that's lyrical
+I'm not a miracle
+I'm a heaven-sent instrument
+My rythmatic regiment navigates melodic notes for your soul and your mental
+That's why I'm instrumental
+Vibrations is what I'm into
+Yeah, I need my loot by rent day
+But that ain't what gives me the heart of Kunta Kinte
+I'm tryin' to give us, "us free" like Cinque
+I can't stop
+That's why I'm hot
+Determination, dedication, motivation
+I'm talking to you of my many inspirations
+When I say I can't let you or self down
+
+If I were on the highest cliff on the highest riff
+And you slipped off the side and clenched on to your life in my grip
+I would never, ever, let you down
+And when these words are found
+Let it be known that God's penmanship
+Has been signed in the language called love
+That's why my breath is felt by the deaf
+And why my words are heard and confined to the ears of the blind
+I, too, dream in color, and in rhyme
+So I guess I'm one of a kind in a full house
+'Cause whenever I open my heart, my soul, or my mouth
+A touch of God rains out
+
+Take 'em to church
+When it comes to being true, at least true to me
+One thing I've found, one thing I've found
+Ohm no, you'll never let me down
+Get up I get (down)
+Get up I get
+Get up I get
+Get up I get
+Get up I get
+Get up I get down
+
+who else you know been hot this long?
+(Oh, yeah, you know we ain't finished)
+Started from nothing, but he got this strong (the Roc is in the building)
+Built the Roc from a pebble, pedalled rock before I met you
+Pedalled bikes, got my nephews pedal bikes because they special
+Let you tell that man I'm falling
+Well, somebody must've caught him, 'cause
+Every fourth quarter, I like to Mike Jordan them
+Number one albums, what I got? Like four of them
+More of them on the way, the Eighth Wonder on the way
+Clear the way, I'm here to stay
+Y'all can save the chitter chat, this and that, dissin' Jay
+Dissin' Jay will get you mased
+
+When I start spitting them lyrics, niggas get very religious
+Six Hail Marys, "Please Father forgive us"
+Young, the Archbishop, the Pope John Paul of y'all niggas
+The way y'all all follow Jigga
+Hov's a living legend and I tell you why
+Everybody wanna be Hov and Hov's still alive
+Down, down, down, down, down
+            </pre>
         </div>
     </div>
 
